tag script head

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>BMI Calculator</title>
 
     <link rel="stylesheet" href="./style.css">
+    <script src="./main.js" defer></script> <!--Defer é uma props booleana que condiciona a leitura do script JS após o carregamento de todo o body! -->
 </head>
 <body>
     
