first html structure

--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
     <script src="./main.js" defer></script> <!--Defer é uma props booleana que condiciona a leitura do script JS após o carregamento de todo o body! -->
 </head>
 <body>
-    
+    <main>
+        <h1>BMI Calculator</h1>
+        <form action="">
+            <label for=""></label>
+            <input type="text">
+
+            <label for=""></label>
+            <input type="text">
+
+            <button>Calculate BMI</button>
+        </form>
+    </main>
+
     
 </body>
 </html>
