card stylization concluded

--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BMI Calculator</title>
 
-    <link rel="stylesheet" href="./style.css">
-    <script src="./main.js" defer></script> <!--Defer é uma props booleana que condiciona a leitura do script JS após o carregamento de todo o body! -->
-</head>
-<body>
-    <main>
+    <link rel="stylesheet" href="./style.css" />
+    <script src="./main.js" defer></script>
+    <!--Defer é uma props booleana que condiciona a leitura do script JS após o carregamento de todo o body! -->
+  </head>
+  <body>
+    <div class="container"> <!--Como temos diversos elementos além da main, criamos uma caixa ao redor da main p/ garantir que ela esteja sempre centralizada na vp! Se colocamos essas props direto no body, ao criar novos elementos, impactamos no alinhamento da main!-->
+      <main class="card">
         <h1>BMI Calculator</h1>
         <form action="">
-            <label for=""></label>
-            <input type="text">
+          <label for=""></label>
+          <input type="text" />
 
-            <label for=""></label>
-            <input type="text">
+          <label for=""></label>
+          <input type="text" />
 
-            <button>Calculate BMI</button>
+          <button>Calculate BMI</button>
         </form>
-    </main>
-
-    
-</body>
+      </main>
+    </div>
+  </body>
 </html>
