fonts imported, and colors variables

--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BMI Calculator</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="./style.css" />
     <script src="./main.js" defer></script>
     <!--Defer é uma props booleana que condiciona a leitura do script JS após o carregamento de todo o body! -->
   </head>
   <body>
-    <div class="container"> <!--Como temos diversos elementos além da main, criamos uma caixa ao redor da main p/ garantir que ela esteja sempre centralizada na vp! Se colocamos essas props direto no body, ao criar novos elementos, impactamos no alinhamento da main!-->
+    <div class="container">
+      <!--Como temos diversos elementos além da main, criamos uma caixa ao redor da main p/ garantir que ela esteja sempre centralizada na vp! Se colocamos essas props direto no body, ao criar novos elementos, impactamos no alinhamento da main!-->
       <main class="card">
         <h1>BMI Calculator</h1>
         <form action="">
