--- a/index.html
+++ b/index.html
@@ -20,13 +20,17 @@
     <div class="container">
       <!--Como temos diversos elementos além da main, criamos uma caixa ao redor da main p/ garantir que ela esteja sempre centralizada na vp! Se colocamos essas props direto no body, ao criar novos elementos, impactamos no alinhamento da main!-->
       <main class="card">
-        <h1>BMI Calculator</h1>
+        <h1 class="title">BMI Calculator</h1>
         <form action="">
-          <label for=""></label>
-          <input type="text" />
+          <div class="input-wrapper">
+            <label for="weight">Weight (kg)</label>
+            <input id="weight" type="text" />
+          </div>
 
-          <label for=""></label>
-          <input type="text" />
+          <div class="input-wrapper">
+            <label for="height">Height (m)</label>
+            <input id="height" type="text" />
+          </div>
 
           <button>Calculate BMI</button>
         </form>
