--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
     <div class="container">
       <!--Como temos diversos elementos além da main, criamos uma caixa ao redor da main p/ garantir que ela esteja sempre centralizada na vp! Se colocamos essas props direto no body, ao criar novos elementos, impactamos no alinhamento da main!-->
       <main class="card">
-        <h1 class="title">BMI Calculator</h1>
         <form action="">
+          <h1 class="title">BMI Calculator</h1>
+
           <div class="input-wrapper">
             <label for="weight">Weight (kg)</label>
             <input id="weight" type="text" placeholder="60" />
@@ -34,7 +35,7 @@
 
           <button type="submit">
             Calculate BMI
-            <img src="./assets/arrow.svg" alt="Arrow right white">
+            <img src="./assets/arrow.svg" alt="Arrow right white" />
             <!-- Pode-se tb colocar o svg direto no html, para situações em q ocorra estilizações via CSS
             <svg
               width="17"
