modal-wrapper html and css stylization

--- a/index.html
+++ b/index.html
@@ -57,5 +57,15 @@
         </form>
       </main>
     </div>
+
+    <!--Pensar em uma caixa que ocupe toda a viewport e que contenha um modal!-->
+    <div class="modal-wrapper">
+        <div class="modal card">
+            <button class="close">
+                <img src="./assets/close-icon.svg" alt="Close modal icon">
+            </button>
+            <h2 class="title">`Your BMI is ${X}.`</h2>
+        </div>
+    </div>
   </body>
 </html>
