rename js, variables and form fcns

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     />
 
     <link rel="stylesheet" href="./style.css" />
-    <script src="./main.js" defer></script>
+    <script src="./script.js" defer></script>
     <!--Defer é uma props booleana que condiciona a leitura do script JS após o carregamento de todo o body! -->
   </head>
   <body>
-    <div class="alert-error open">Only numbers accepted</div>
+    <div class="alert-error">Only numbers accepted</div>
     <div class="container">
       <!--Como temos diversos elementos além da main, criamos uma caixa ao redor da main p/ garantir que ela esteja sempre centralizada na vp! Se colocamos essas props direto no body, ao criar novos elementos, impactamos no alinhamento da main!-->
       <main class="card">
