--- a/index.html
+++ b/index.html
@@ -62,10 +62,12 @@
     <!--Pensar em uma caixa que ocupe toda a viewport e que contenha um modal!-->
     <div class="modal-wrapper">
       <div class="modal card">
-        <button class="close">
-          <img src="./assets/close-icon.svg" alt="Close modal icon" />
-        </button>
-        <h2 class="title">`Your BMI is ${X}.`</h2>
+        <h2 class="title">
+          <button class="close">
+            <img src="./assets/close-icon.svg" alt="Close modal icon" />
+          </button>
+          <span></span>
+        </h2>
       </div>
     </div>
   </body>
