modal.js componetization, js folder

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     />
 
     <link rel="stylesheet" href="./style.css" />
-    <script src="./script.js" defer></script>
+    <script src="./js/script.js" defer type="module"></script>
     <!--Defer é uma props booleana que condiciona a leitura do script JS após o carregamento de todo o body! -->
+    <!--type module: significa que o script está aceitando o import e export do JS ES6.-->
   </head>
   <body>
     <div class="alert-error">Only numbers accepted</div>
