--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
             <input id="height" type="text" placeholder="1.65" />
           </div>
 
+          <div class="input-wrapper">
+            <label for="useremail">E-mail</label>
+            <input id="useremail" type="email" placeholder="name@mail.com" />
+          </div>
+
           <button type="submit">
             Calculate BMI
             <img src="./assets/arrow.svg" alt="Arrow right white" />
