--- a/index.html
+++ b/index.html
@@ -21,9 +21,13 @@
     <div class="alert-error">Only numbers accepted</div>
     <div class="container">
       <!--Como temos diversos elementos além da main, criamos uma caixa ao redor da main p/ garantir que ela esteja sempre centralizada na vp! Se colocamos essas props direto no body, ao criar novos elementos, impactamos no alinhamento da main!-->
+      <h1>Calculate your Body Mass Index (BMI) now!</h1>
       <main class="card">
         <form action="">
-          <h1 class="title">BMI Calculator</h1>
+          <div class="form-header">
+            <img src="./assets/weight-img.png" alt="Weight image" />
+            <p class="title">BMI Calculator</p>
+          </div>
 
           <div class="input-wrapper">
             <label for="weight">Weight (kg)</label>
