--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
           <div class="input-wrapper">
             <label for="useremail">E-mail</label>
-            <input id="useremail" type="email" placeholder="name@mail.com" />
+            <input id="useremail" type="email" placeholder="name@mail.com" required />
           </div>
 
           <button type="submit">
