input required, modal p text

--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
 
           <div class="input-wrapper">
             <label for="useremail">E-mail</label>
-            <input id="useremail" type="email" placeholder="name@mail.com" required />
+            <input
+              id="useremail"
+              type="email"
+              placeholder="name@mail.com"
+              required
+            />
           </div>
 
           <button type="submit">
@@ -77,6 +82,9 @@
             <img src="./assets/close-icon.svg" alt="Close modal icon" />
           </button>
           <span></span>
+          <p>
+            The information provided should not be used for diagnosing. Always seek the advice of your doctor or other qualified health provider.
+          </p>
         </h2>
       </div>
     </div>
